tests/toylang/neg/001498_mutation.toylang
program a = { var a if bool; } .
